# networking-syllabus

./: .gitignore
aula1/: excalidraw_exercise
aula2/: container1.Dockerfile  container2.Dockerfile  docker-compose.yaml
aula3/: Dockerfile.client  Dockerfile.server  client.py  docker-compose.yaml  server.py
aula4/: docker-compose.yaml
aula5/: docker-compose.yaml
projeto_final/: Makefile  README.md  docker-compose.yml
projeto_final/api/: Dockerfile  pyproject.toml
projeto_final/api/src/: app.py
projeto_final/nginx/: nginx.conf
projeto_final/nginx/certs/: server.crt  server.key
